--- a/views/planner/plannerContent.html
+++ b/views/planner/plannerContent.html
@@ -1,10 +1,10 @@
 <div class="container">
-
-
 <div class="sortPanel">
 </div>
-
+<div class="map_favorites">
 <div class ="container" id="map"></div>
 <div id="searchResults"></div>
+</div>
+</div>
 
 
