added sorting for matchSchedule and matchfavorites

--- a/views/planner/planner.ejs
+++ b/views/planner/planner.ejs
@@ -34,9 +34,8 @@ function initMap() {
     };
      
  
-    //display all of the user's favorites items and retrieve yelpData of those items
-    //Post request to node  ----> app.js    
-   $.ajax({
+    //display all of User's favorites in the schedule panel 
+     $.ajax({
         type: "GET",
         url: "/planner/favorites/show",
         data: "",
@@ -53,42 +52,6 @@ function initMap() {
        //delete toDo list from schedule
                
         //render saved schedule
-                     $.ajax({
-                        type: "GET",
-                        url: "/planner/schedule/show",
-                        dataType:"json",
-                        success:function(schedule){
-                            for( var i=0; i<schedule.length ; i++){
-                                $(".sortPanel").append(function(){
-                                    
-                                   return "<div class='ToDo'><div class='ToDoItems'>"+
-                                        "<span class='list-group-item'>"+
-                                        "<h5 class='list-group-item-heading' id='heading'><span id='queryNumber'>"+i+"</span>"+
-                                        "<span class='scheduleName' id='"+schedule[i].id+"'>."+schedule[i].name+"</span>"+
-                                        "<span>&nbsp<img src='"+schedule[i].rating_img_url+"'></img></span>"+
-                                        "<span id='reviews'>&nbsp"+schedule[i].review_count+"reviews</span></h5>"+
-                                        "<p class='snippet_text'>"+schedule[i].snippet_text+"</p><div class='glyphicon glyphicon-remove removeToDo'></div></di>"+
-                                        "</span><img class='locationImage'src='"+schedule[i].image_url+"'></img></div>"
-                                });
-                            }
-                            $(".removeToDo").on("click",function(){
-                   
-                                var deleteToDo = $(this).siblings("#heading").children("#queryNumber").html();
-                                    console.log(deleteToDo);
-                                  $.ajax({
-                                      type: "DELETE",
-                                      url:"/planner/toDo/delete",
-                                      data:{'id':deleteToDo},
-                                      success:function(){}
-                                      
-                                  });
-                    });    
-                       
-                       
-                       
-                        }  
-                        
-                     });
 
             
             //add toDo to schedule
@@ -157,7 +120,53 @@ function initMap() {
 
                 } 
     });
+    
+    
+    //display user's schedule in the schedule panel
+     $.ajax({
+        type: "GET",
+        url: "/planner/schedule/show",
+        data:"",
+        dataType:"json",
+        success:function(schedule){
+            console.log(schedule);
+            for( var i=0; i<schedule.length ; i++){
+                $(".sortPanel").append(function(){
+                    
+                   return "<div class='ToDo'><div class='ToDoItems'>"+
+                        "<span class='list-group-item'>"+
+                        "<h5 class='list-group-item-heading' id='heading'><span id='queryNumber'>"+i+"</span>"+
+                        "<span class='scheduleName' id='"+schedule[i].id+"'>."+schedule[i].name+"</span>"+
+                        "<span>&nbsp<img src='"+schedule[i].rating_img_url+"'></img></span>"+
+                        "<span id='reviews'>&nbsp"+schedule[i].review_count+"reviews</span></h5>"+
+                        "<p class='snippet_text'>"+schedule[i].snippet_text+"</p><div class='glyphicon glyphicon-remove removeToDo'></div></di>"+
+                        "</span><img class='locationImage'src='"+schedule[i].image_url+"'></img></div>"
+                });
+            }
+            $(".removeToDo").on("click",function(){
+        
+                var deleteToDo = $(this).siblings("#heading").children("#queryNumber").html();
+                    console.log(deleteToDo);
+                  $.ajax({
+                      type: "DELETE",
+                      url:"/planner/toDo/delete",
+                      data:{'id':deleteToDo},
+                      success:function(){}
+                      
+                  });
+        });    
+    
+    
+    
+    }  
+    
+    });
+    
+    
+    
 
+    
+    
 }
 </script>
 
