added sortable to schedule

--- a/views/planner/plannerContent.html
+++ b/views/planner/plannerContent.html
@@ -1,5 +1,5 @@
 <div class="container">
-<div class="sortPanel">
+<div id="sortPanel">
 </div>
 <div class="map_favorites">
 <div class ="container" id="map"></div>
