--- a/views/planner/planner.ejs
+++ b/views/planner/planner.ejs
@@ -1,30 +1,22 @@
-
 <%include ../partials/header%>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMMJZOHCIonaJDigVJKsgPV9Y8QUFK6tA&callback=initMap"async defer></script>
-
-
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMMJZOHCIonaJDigVJKsgPV9Y8QUFK6tA&callback=initMap"async defer>
+</script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/Sortable/1.4.2/Sortable.min.js"></script>
 <style type="text/css">
- 
 <%include plannerStyle.css%>
-  
 </style>
 
-
 <script>
-
 function initMap() {
-
     //google map settings
-     var map = new google.maps.Map(document.getElementById('map'), {
+    var map = new google.maps.Map(document.getElementById('map'),{
       center: {lat: -34.397, lng: 150.644},
       zoom: 10
     });
-                      
     // obtain geolocatin of current position
     if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(function(position) {
-        //set map center to current geolocation
+              //set map center to current geolocation
               $("#currentLocation").click(function() { 
                 map.setCenter( {lat: position.coords.latitude, lng: position.coords.longitude});
               });
@@ -33,7 +25,8 @@ function initMap() {
         console.log("failed")
     };
      
- 
+     
+     
     //display all of User's favorites in the schedule panel 
      $.ajax({
         type: "GET",
@@ -42,139 +35,106 @@ function initMap() {
         dataType:"json",
         success: function(matchFavorites){   
             console.log(matchFavorites)
-        //display all favorite data in favorite panel
+            //display all favorite data in favorite panel
             for(var i = 0; i<matchFavorites.length;i++){
                   $("#searchResults").append(function(){
                         return  "<div class= 'resultboxes' id='"+i+"'><div>"+matchFavorites[i].name+"</div>"+
                         "<span class='glyphicon glyphicon-remove'></span><span class='glyphicon glyphicon-plus addToDo'></span></div>"
                        });
                    }
-       //delete toDo list from schedule
-               
-        //render saved schedule
-
-            
-            //add toDo to schedule
-               $(".addToDo").on("click",function(){
-                   
-                   var newToDo = $(this).parent().attr("id");
-                   $.ajax({
-                        type: "POST",
-                        url: "/planner/toDo/new",
-                        data: matchFavorites[newToDo],
-                        dataType:"json",
-                        success:function(schedule){
-                            console.log(schedule)
-                            
-                        }
-                   })
-                        //function for searching through matchFavorites
-                });
-                
-     
-            
-            
-            //features for dropping components    
-                $(".ToDo").droppable({
-                    accept:".resultboxes",
-                    activeClass:"dropBox",
-                    drop: function(event,ui){
-                        
-                        var toDoArr = ui.draggable.attr("id");
-                        console.log(toDoArr);
-                        //locate object in matchFavorites that 
-                        //has id :droppedId and print yelpData on ToDo Panel
-                        $(this).append(function(){
-                        
-                       //  console.log(toDoThumb);
-                             return "<div class='ToDoItems'>"+
-                            "<span class='list-group-item'>"+
-                            "<h5 class='list-group-item-heading' id='heading'><span id='queryNumber'>"+toDoArr+'</span>.'+matchFavorites[toDoArr].name+
-                            "&nbsp&nbsp&nbsp<span>"+
-                            "<img src='"+matchFavorites[toDoArr].rating_img_url+"'></img></span><span id='reviews' >&nbsp"+matchFavorites[toDoArr].review_count+" reviews</span></h4>"+
-                            "<p class='snippet_text'>"+matchFavorites[toDoArr].snippet_text+"</p></di>"+
-                            "</span><img class='locationImage'src='"+matchFavorites[toDoArr].image_url+"'></img>"
-                       });
-                            
-                            
-                        
-                    
-                        //function for searching through matchFavorites
-                       
+           
+           //add favorites to schedule and save to users collections
+           //when the + icon is clicked    
+           $(".addToDo").on("click",function(){
+               var newToDo = $(this).parent().attr("id");
+               $.ajax({
+                    type: "POST",
+                    url: "/planner/toDo/new",
+                    data: matchFavorites[newToDo],
+                    dataType:"json",
+                    success:function(schedule){
+                     
+                     $("#sortPanel").append(function(){
+                          var scheduleLength =  $(".ToDoItems").length;
+                          return toDoContents(schedule,scheduleLength);
+                    });
                     }
-                });    
+               })
+            });
+        
+            //features for dropping components    
+            $(".ToDo").droppable({
+                accept:".resultboxes",
+                activeClass:"dropBox",
+                drop: function(event,ui){
+                    
+                    var toDoArr = ui.draggable.attr("id");
+                    console.log(toDoArr);
+                    //locate object in matchFavorites that 
+                    //has id :droppedId and print yelpData on ToDo Panel
+                    $(this).append(function(){
+                   //  console.log(toDoThumb);
+                         return "<div class='ToDoItems'>"+
+                        "<span class='list-group-item'>"+
+                        "<h5 class='list-group-item-heading' id='heading'><span id='queryNumber'>"+toDoArr+'</span>.'+matchFavorites[toDoArr].name+
+                        "&nbsp&nbsp&nbsp<span>"+
+                        "<img src='"+matchFavorites[toDoArr].rating_img_url+"'></img></span><span id='reviews' >&nbsp"+matchFavorites[toDoArr].review_count+" reviews</span></h4>"+
+                        "<p class='snippet_text'>"+matchFavorites[toDoArr].snippet_text+"</p></di>"+
+                        "</span><img class='locationImage'src='"+matchFavorites[toDoArr].image_url+"'></img>"
+                   });
+                }
+            });    
         
             //features for dragging components
-               $( ".resultboxes" ).draggable({
-                  distance: 10,
-                });
-                
-        //function for removing Todo
-        //function for moving Todo
-        //function for editing Todo
-        
-        //set center of map to search locations
-
-        //Render first 10 results from yelp search and plot on map
-
-        //add number to queries and markers on maps
-
+           $( ".resultboxes" ).draggable({
+              distance: 10,
+            });
                 } 
     });
     
     
     //display user's schedule in the schedule panel
-     $.ajax({
+    $.ajax({
         type: "GET",
         url: "/planner/schedule/show",
         data:"",
         dataType:"json",
         success:function(schedule){
             for( var i=0; i<schedule.length ; i++){
-                $(".sortPanel").append(function(){
-                
-                  return toDoContents(schedule,i);
-                
+                $("#sortPanel").append(function(){
+                  return toDoContents(schedule[i],i);
                 });
             }
+            var testing = document.getElementById("sortPanel")
+            Sortable.create(testing);
             
-            $(".removeToDo").on("click",function(){
-        
-                var deleteToDo = $(this).siblings("#heading").children("#queryNumber").html();
-                  $.ajax({
-                      type: "DELETE",
-                      url:"/planner/toDo/delete",
-                      data:{'id':deleteToDo},
-                      success:function(deletedSchedule){
-                        
-                        $("#"+deletedSchedule+"").remove();
-                     
-                      }
-                  });
-        });    
-    
-    
-    
-    }  
-    
+         $(".removeToDo").on("click",function(){
+          console.log("hey")
+            var deleteToDo = $(this).siblings("#heading").children("#queryNumber").html();
+              $.ajax({
+                  type: "DELETE",
+                  url:"/planner/toDo/delete",
+                  data:{'id':deleteToDo},
+                  success:function(deletedSchedule){
+                    $("#"+deletedSchedule+"").remove();
+                  }
+              });
+        }); 
+        }  
     });
     
-    
- function toDoContents(toDoObject,i){
-     
-         return  "<div id='"+i+"'class='ToDo'><div class='ToDoItems'>"+
-                        "<span class='list-group-item'>"+
-                        "<h5 class='list-group-item-heading' id='heading'><span id='queryNumber'>"+i+"</span>"+
-                        "<span class='scheduleName' id='"+toDoObject[i].id+"'>."+toDoObject[i].name+"</span>"+
-                        "<span>&nbsp<img src='"+toDoObject[i].rating_img_url+"'></img></span>"+
-                        "<span id='reviews'>&nbsp"+toDoObject[i].review_count+"reviews</span></h5>"+
-                        "<p class='snippet_text'>"+toDoObject[i].snippet_text+"</p><div class='glyphicon glyphicon-remove removeToDo'></div></di>"+
-                        "</span><img class='locationImage'src='"+toDoObject[i].image_url+"'></img></div>"
- };
-  
+     //function for returning toDo boxes    
+     function toDoContents(toDoObject,i){
+             return  "<div id='"+i+"'class='ToDo'><div class='ToDoItems'>"+
+                            "<span class='list-group-item'>"+
+                            "<h5 class='list-group-item-heading' id='heading'><span id='queryNumber'>"+i+"</span>"+
+                            "<span class='scheduleName' id='"+toDoObject.id+"'>."+toDoObject.name+"</span>"+
+                            "<span>&nbsp<img src='"+toDoObject.rating_img_url+"'></img></span>"+
+                            "<span id='reviews'>&nbsp"+toDoObject.review_count+"reviews</span></h5>"+
+                            "<p class='snippet_text'>"+toDoObject.snippet_text+"</p><div class='glyphicon glyphicon-remove removeToDo'></div></di>"+
+                            "</span><img class='locationImage'src='"+toDoObject.image_url+"'></img></div>"
+     };
 
-    
-    
 }
 </script>
 
