--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -1,18 +1,13 @@
 <%include ../partials/header%>
-
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMMJZOHCIonaJDigVJKsgPV9Y8QUFK6tA&callback=initMap"async defer></script>
-
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMMJZOHCIonaJDigVJKsgPV9Y8QUFK6tA&callback=initMap"async defer>
+</script>
 <style type="text/css">
- 
 <%include searchStyle.css%>
 </style>
-
 
 <script>
 //initiate google maps
 function initMap() {
-    
     var markers=[] ; // array for storing all of the markers  
    //google maps settings
     var map = new google.maps.Map(document.getElementById('map'), {
@@ -22,20 +17,18 @@ function initMap() {
                     
     // obtain geolocatin of current position
     if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function(position) {
+         navigator.geolocation.getCurrentPosition(function(position) {
         //set map center to current geolocation
               $("#currentLocation").click(function() { 
                 map.setCenter( {lat: position.coords.latitude, lng: position.coords.longitude});
               });
           });
-        }else{
-            console.log("failed")
-          };
+    }else{
+        console.log("failed")
+    };
 
-      
-    //Create search and render results using AJAX.
-        //AJAX post request  to node and expect to recieve yelp data in JSON.
-    
+    //render seasrch results using AJAX.
+    //AJAX post request  to node and expect to recieve yelp data in JSON.
     $("#testbutton").click(function(){
         //function for setting markers on map
         function markMap(map){
@@ -43,40 +36,33 @@ function initMap() {
                     markers[i].setMap(map);
                 }
         }
-       //remove markers on map
+        //remove markers on map
         markMap(null);
-        
+        //clear markers on map when new search is made
         markers=[];
-        
         //empty list to refresh
         $("#searchResults").empty();
-        
         var term = $("#term").val();         //obtain value from input form
-        
         var location = $("#location").val(); //obtain value from input form
-         
         var favoritesData;
          
-
         //Post request to node ---->  app.js    
         $.ajax({
             type: "POST",
             url: "/favorites",
             data: {term:term, location:location},
             dataType:"json",
-            success: function(yelpData){    //Return data obtained from node 
-                
+            //Return data obtained from node 
+            success: function(yelpData){
                 var spot = yelpData.businesses; //variable fo business array
-            
-            //set center of map to search locations
+                //set center of map to search locations
                 map.setCenter({lat: yelpData.region.center.latitude , lng: yelpData.region.center.longitude}); 
-       
-            //Render first 10 results from yelp search and plot on map
+                //Render first 10 results from yelp search and plot on map
                 for( var i = 0 ; i<10 ; i++ ){
 
-                var queryNumber = String(i + 1);  //number for listing out search results
+                var queryNumber = String(i + 1);  //numbers for listing search results
            
-            //print out serach results on panel
+                //print out serach results on panel
                 $("#searchResults").append(function(){
                     return "<div class= 'resultboxes'>"+
                             "<span class='list-group-item'>"+
@@ -86,40 +72,32 @@ function initMap() {
                             "</span><img class='locationImage'src='"+spot[i].image_url+"'></img></div>"
                        });
              
-             //show heart as red if User have already added it to favorite. else, shows empty heart      
+                //show heart as red if User have already added it to favorite. else, shows empty heart      
                 if(spot[i].heartOn=="true"){
                    $("#heartIcon"+[i]).addClass('glyphicon-heart').removeClass('glyphicon-heart-empty');
                     }else{
                     }
             
-              //add number to queries and markers on maps
+                 //add number to queries and markers on maps
                  marker = new google.maps.Marker({
                                 position: {lat:spot[i].location.coordinate.latitude, lng:spot[i].location.coordinate.longitude},
                                 title: spot[i].name,
                                 label: queryNumber,
                                 });    
-                               
+                 //load all markers in array to be displayed on google maps              
                  markers.push(marker);
-                 
                  markMap(map);
-               
             };
 
-     //toggle heart button, add activities to node database 
+                 //toggle heart button, add activities to node database 
                   $('.glyphicon').click(function(){
-                      
-                    
                       var selectedData = $(this).siblings('#heading').children('#queryNumber').html() - 1 ;
-                      
                       var favoriteSpots =  spot[selectedData];
                       
-                      
                       if($(this).attr("class") == 'glyphicon glyphicon-heart-empty' ){
-                         
                          //Change from hollow heart to red-filled heart
                           $(this).switchClass('glyphicon-heart-empty','glyphicon-heart',0);
-                           
-                       //Post id to node--->save queries id to currentUser
+                          //Post id to node--->save queries id to currentUser
                           $.ajax({
                              type: "POST",
                              url: "/favorites/save",
@@ -128,9 +106,7 @@ function initMap() {
                              success: function(dataReturn){
                                  console.log(dataReturn);
                              }
-                             });    
-                      
-                          
+                             });
                       }else{
                            $(this).switchClass('glyphicon-heart','glyphicon-heart-empty',0);   
                             //Post id to node--->remove queries id of currentuser when favorite is toggled off
@@ -141,7 +117,6 @@ function initMap() {
                                  dataType:"json",
                                  success: function(deletedSpots){
                                      console.log(deletedSpots);
-                                     
                                  }
                              });  
                       }
@@ -149,20 +124,17 @@ function initMap() {
 
             //Select icon on map when hover 
             $('.resultboxes').hover(function(){
-               
                $(this).addClass('boxHighlight');
-               
-                },function(){
-                   
-                   $(this).removeClass('boxHighlight');
-            
-               }); 
+            },function(){
+                $(this).removeClass('boxHighlight');
+                }
+            ); 
                   
                   
-                } 
-            });
-          });
-    };
+        } 
+    });
+  });
+};
 
 </script>
 
